resources/sass/_feed.scss
@import '~swiper/swiper';
@import '~swiper/components/navigation/navigation';
@import '~swiper/components/pagination/pagination';

$feed-honeydew: #e3f3e5;
$feed-teal: #41b9aa;

.swiper-container {
    width: 100%;
    flex: 1 1 auto;
}

.swiper-slide.scrollable {
    overflow-y: scroll;
}

.swiper-pagination {
    padding-top: 1rem;
    padding-bottom: 1rem;
    background-color: $feed-honeydew;
    bottom: 0 !important;
}

.swiper-pagination-bullet {
    width: 7rem;
    height: 3rem;
    text-align: center;
    font-size: 15px;
    font-weight: bold;
    opacity: .8;
    background: $feed-honeydew;
    padding: 10px;
    border: 2px solid $feed-teal;
    margin-left: 4% !important;
    margin-right: 4% !important;
}

.swiper-pagination-bullet-active {
    color:white;
    background: $feed-teal;
    opacity: 1;
}

#feed-nav-1 {
    flex: 0 1 auto;
    color: $feed-teal;
    padding: 30px 30px 0 30px;

    @include for-tablet-portrait-up {
        display: none;
    }

    .row {
        margin-bottom: 1rem !important;
    }
}

#feed-nav-2 {
    display: none;

    @include for-tablet-portrait-up {
        display: block;
    }
}

#feed-nav-1 .logo, #feed-nav-2 .logo {
    width: 182px;

    @include for-desktop-up {
        width: 200px;
    }
}

.timer-section-middle {
    display: none;

    @include for-lg-desktop-up {
        display: block;
    }
}

.timer-section-beneath {
    display:none;

    @include for-tablet-landscape-up {
        display: block;
    }

    @include for-lg-desktop-up {
        display: none;
    }
}

.auth-link {
    text-decoration: underline;
    font-weight: bold;
    font-size: 16px;
}

#auth-links-beneath {
    @include for-tablet-landscape-up {
        display: none;
    }
}

#auth-links-inline {
    display: none;

    @include for-tablet-landscape-up {
        display: block;
    }
}

#donate-button {
    @extend .swirvy-box;

    display: inline-block;
    border: 2px solid $feed-teal;
    position: relative;
    width: 110px;
    height: 49px;
    font-size: 20px;
    text-align: center;
    padding: 11px;
    margin-left: auto;
    font-weight: bold;
    color: $dark-text;
    // border-top-left-radius: 30px;
    // border-bottom-right-radius: 30px;

    @include for-desktop-up {
        width: 150px;
        height: 100%;
    }

    &:hover {
        transition: all .15s ease-in-out;
        background-color: $feed-teal;
        color: white;
        text-decoration: none;

        i {
            color: white;
            transition: all .15s ease-in-out;
        }
    }

    i {
        color: #F07365;
    }
}

.timer-display {
    font-size: 30px;
    color: $dark-text;

    & > div {
        display: inline-block;
        background-color: #C8E0C1;
        width: 50px;
        border-top-left-radius: 7px;
        border-bottom-right-radius: 7px;
        padding: 5px 0px;
    }

    .minutes {
        font-weight: bold;
    }

    .seconds {
        margin-left: -4px;
    }
}

.timer-complete {
    display: none;
}

#minutes-left {
    letter-spacing: 1px;
    font-size: 14px;
    font-weight: bold;
    margin-top: -2px;
}

#easy-to-copy-resources {
    color: $dark-text;
    text-align: center;
    width: 100%;

    @include for-sm-tablet-portrait-up {
        width: auto;
    }

    @include for-tablet-portrait-up {
        width: 100%;
    }

    @include for-tablet-landscape-up {
        text-align: left;
        width: auto;
    }
}

.verbiage-container {
    width: 100%;
    padding-bottom: 5px;

    @include for-sm-tablet-portrait-up {
        width: 50%;
    }

    @include for-tablet-portrait-up {
        width: 100%;
    }
}

.verbiage-switch {
    color: #19443A;
    font-size: 17px;
}

.verbiage-active {
    background-color: $feed-teal;
}

.verbiage-inactive {
    background-color: #D4E9D0;
}

.verbiage-link {
    /*padding-top: 100%;*/
	/*position: relative;*/
    background-color: #E7F9EC;
    border-top: 2px solid #b7dbc7;
    padding: 5px 10px;
    height: 73px;

    @include for-sm-tablet-portrait-up {
        height: 100%;
    }

    &:hover {
        @extend .text-success;
        cursor: pointer;
    }

    i {
        /*font-size: 50px;*/
        /*padding-bottom: 10px;*/
        font-size: 25px;
        padding: 0px;
        padding-top: 5px;
        display: block;
        margin: auto;

        @include for-sm-tablet-portrait-up {
            padding-top: 4px;
            display: inline-block;
            margin: auto;
        }
    }

    p {
        color: $dark-text;
        display: block;
        text-align: center;
        padding-left: 7px;

        @include for-sm-tablet-portrait-up {
            display: inline;
            text-align: left;
        }
    }
}

.verbiage-inner {
    position: absolute;
    width: 100%;
    height: 100%;
    top: 0px;
    left: 0px;
    text-align: center;
    display: flex;
    justify-content: flex-end;
    flex-direction: column;
    background-color: #E7F9EC;
    border-top: 2px solid #D4E9D0;
}

.verbiage-index {
	font-size: 12px;
}

.verbiage-msg {
    position: relative;
    margin-top: 1rem;

    textarea {
        position: relative;
    }

    .copy-btn {
        position: absolute;
        top: calc(100% - 60px);
        left: calc(100% - 60px);
    }

    .close-btn {
        position: absolute;
        top: 0.4rem;
        left: calc(100% - 60px);
    }
}

#feed {
	position: relative;
    background-color: $feed-honeydew;
    display: flex;
    flex-flow: column;
    height: 100%;

    a {
        color: $dark-text;
        font-size: 15px;

        @include for-desktop-up {
            font-size: 20px;
        }
    }

    .twitter-timeline, .twitter-timeline p {
        font-size: 20px !important;
    }

    .footer {
        display: flex;
        padding-bottom: 4rem;

        @include for-tablet-portrait-up {
            padding-bottom: 0;
        }

        .font-serif {
            flex-grow: 2;
            font-size: 20px;
            color: $dark-text;
        }

        a {
            color: $pink;
        }
    }
}

#leftside {
	color: $feed-teal;
    min-height: 100vh;
    padding: 30px;
    padding-top: 0;

    @include for-tablet-portrait-up {
        padding-top: 30px;
    }
}

#rightside {
    @include for-tablet-portrait-up {
        background-image: url('/images/background.svg');
        background-size: cover;
        width: 100%;
        padding: 10px;
        min-height: 100vh;
        position: absolute;
        top: 0px;
        right: 0px;
        bottom: 0px;
    }

    @include for-tablet-landscape-up {
        padding: 20px;
    }

    @include for-desktop-up {
        padding: 30px;
    }
}

#rightside-inner {
	background-color: white;
	width: 100%;
	height: 100%;
	border-top-left-radius: 150px;
	border-bottom-right-radius: 150px;
    padding: 75px 30px;

    @include for-tablet-landscape-up {
        padding: 75px 50px;
    }

    .flag-list {
        margin-top: -70px;
    }

    .flag-item {
        margin-top: 0.8rem;
        margin-bottom: 0.8rem;
    }
}

#Twitter {
	width: 100%;
	height: 100%;
    max-height: 100vh;
    overflow: auto;
    -webkit-overflow-scrolling: touch;
}

/* total width */
#Twitter::-webkit-scrollbar {
    background-color:#fff;
    width:16px
}

/* background of the scrollbar except button or resizer */
#Twitter::-webkit-scrollbar-track {
    background-color:#fff
}

/* scrollbar itself */
#Twitter::-webkit-scrollbar-thumb {
    background-color:#303030;
    border-radius:16px;
    border:4px solid #fff
}

.cc-count {
    display: block;
    float: right;
    transition: color .2s ease-in-out;
}

.cc-count.cc-is-fine {
    color: #6C757D !important;
}

.cc-count.cc-is-warning {
    color: #FFC107 !important;
}

.cc-count.cc-is-danger {
    color: #eb6e3d !important;
}

.cc-count.cc-is-expended {
    color: #FFFFFF !important;
    background-color: #DC3545 !important;
    border-radius: 2px;
    padding: 2px;
    line-height: 1;
    margin-top: 4px;
}

